to support java v9 (toList is available only in Java 16)